--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Run the line below in the integrated Terminal to edit Tailwind CSS classes -->
+<!-- Run the code below in the integrated Terminal to edit Tailwind CSS classes -->
 <!-- npx tailwindcss -i tw_input.css -o tw_output.css --watch -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
