--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="virtual keyboard, virtual typing experience">
     <meta name="description"
-        content="Virtual Keyboard is an SPW created with HTML, CSS, Tailwind CSS, and JavaScript to help you experience virtual typing!">
+        content="Virtual Keyboard is a SPW created with HTML, CSS, Tailwind CSS, and JavaScript to help you experience virtual typing!">
     <meta name="author" content="Shayan Zamani">
     <meta name="theme-color" content="#d4d4d8" />
     <link rel="shortcut icon" type="image/x-icon"
