Added 'autoplay' attribute to the audio

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<article
 					class="flex select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
 					<!-- keyboard keypress sound effect -->
-					<audio src="assets/keypress-sound.wav" preload="auto" id="keySound">
+					<audio src="assets/keypress-sound.wav" id="keySound" preload="auto" autoplay>
 						Your browser does not supprot the audio element.
 					</audio>
 
