Added textarea 'autocomplete="off"' for Firefox conflict

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
 				<div
 					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md dark:focus-within:shadow-lg lg:h-[124px] lg:max-w-2xl">
 					<textarea
-						placeholder="Strat typing..."
 						id="textarea"
 						rows="3"
+						autocomplete="off"
+						placeholder="Strat typing..."
 						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 dark:bg-zinc-800 dark:text-zinc-100 lg:text-lg"></textarea>
 				</div>
 
