Added Twitter, OG, & some other meta tags

--- a/index.html
+++ b/index.html
@@ -3,10 +3,35 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Virtual Keyboard | Experience Virtual Typing!</title>
+
 		<meta name="author" content="Shayan Zamani" />
 		<meta name="color-scheme" content="light dark" />
-		<meta name="theme-color" content="#d4d4d8" id="themeColorMetaTag" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="theme-color" content="#d4d4d8" id="themeColorMetaTag" />
+		<meta name="keywords" content="virtual keyboard, online keyboard, virtual typing, experience virtual typing" />
+
+		<meta property="og:type" content="website" />
+		<meta property="og:site_name" content="shayan-zamani.me" />
+		<meta property="og:title" name="title" content="Virtual Keyboard" />
+		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard/" />
+		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard/og-img.png" />
+		<meta property="og:image:alt" content="virtual keyboard" />
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta
+			property="og:description"
+			name="description"
+			content="Virtual Keyboard gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+
+		<meta name="twitter:site" content="@shayan-zamani.me" />
+		<meta name="twitter:title" content="Virtual Keyboard" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard/og-img.png" />
+		<meta property="twitter:image:alt" content="virtual keyboard" />
+		<meta
+			name="twitter:description"
+			content="Virtual Keyboard gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+
 		<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.svg" />
 		<link rel="stylesheet" href="assets/css/styles.css" />
 		<script type="module" src="assets/js/main.js"></script>
@@ -90,7 +115,7 @@
 			</section>
 		</main>
 
-		<footer class="absolute bottom-3 -space-x-2 text-center">
+		<footer class="absolute bottom-3 -space-x-2">
 			<span class="pt-0.5 text-gray-900">©</span>
 			<address class="-ml-1.5 inline-block not-italic">
 				<a
