Init the PWA version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en-US" dir="ltr" data-theme="light">
+	<!-- prettier-ignore -->
 	<head>
 		<meta charset="UTF-8" />
 		<title>Virtual Keyboard | Experience Virtual Typing!</title>
@@ -8,7 +9,7 @@
 		<meta name="color-scheme" content="light dark" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#d4d4d8" id="themeColorMetaTag" />
-		<meta name="keywords" content="virtual keyboard, online keyboard, virtual typing, experience virtual typing" />
+		<meta name="keywords" content="virtual keyboard progressive web app, online keyboard, virtual typing, experience virtual typing, pwa, progressive web app" />
 
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="shayan-zamani.me" />
@@ -18,23 +19,30 @@
 		<meta property="og:image:alt" content="virtual keyboard" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
-		<meta
-			property="og:description"
-			name="description"
-			content="Virtual Keyboard gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+		<meta property="og:description" name="description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences. Install the PWA version on your device and enjoy it offline!" />
 
 		<meta name="twitter:site" content="@shayan-zamani.me" />
 		<meta name="twitter:title" content="Virtual Keyboard" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard/og-img.png" />
 		<meta property="twitter:image:alt" content="virtual keyboard" />
-		<meta
-			name="twitter:description"
-			content="Virtual Keyboard gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences. Install the PWA version on your device and enjoy it offline!" />
 
-		<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.svg" />
+      <link rel="shortcut icon" href="favicon.ico">
+      <link rel="manifest" href="virtual-keyboard.webmanifest">
+      <meta name="msapplication-TileColor" content="#00aba9">
+      <meta name="application-name" content="Virtual Keyboard">
+      <meta name="apple-mobile-web-app-title" content="Virtual Keyboard">
+      <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
+      <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#00aba9">
+      <meta name="msapplication-TileImage" content="assets/favicons/mstile-144x144.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="assets/favicons/android-chrome-192x192.png">
+
 		<link rel="stylesheet" href="assets/css/styles.css" />
-		<script type="module" src="assets/js/main.js"></script>
+		<script type="module" src="assets/js/app.js"></script>
 	</head>
 
 	<body
