Updated some files & URLs,  added `h1` title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<!-- prettier-ignore -->
 	<head>
 		<meta charset="UTF-8" />
-		<title>Virtual Keyboard | Experience Virtual Typing!</title>
+		<title>Virtual Keyboard Progressive Web App | Experience Virtual Typing!</title>
 
 		<meta name="author" content="Shayan Zamani" />
 		<meta name="color-scheme" content="light dark" />
@@ -13,20 +13,20 @@
 
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="shayan-zamani.me" />
-		<meta property="og:title" name="title" content="Virtual Keyboard" />
-		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard/" />
-		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard/og-img.png" />
-		<meta property="og:image:alt" content="virtual keyboard" />
+		<meta property="og:title" name="title" content="Virtual Keyboard Progressive Web App" />
+		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/" />
+		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.png" />
+		<meta property="og:image:alt" content="virtual keyboard progressive web app" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
-		<meta property="og:description" name="description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences. Install the PWA version on your device and enjoy it offline!" />
+		<meta property="og:description" name="description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
 
 		<meta name="twitter:site" content="@shayan-zamani.me" />
-		<meta name="twitter:title" content="Virtual Keyboard" />
+		<meta name="twitter:title" content="Virtual Keyboard Progressive Web App" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard/og-img.png" />
-		<meta property="twitter:image:alt" content="virtual keyboard" />
-		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences. Install the PWA version on your device and enjoy it offline!" />
+		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.png" />
+		<meta property="twitter:image:alt" content="virtual keyboard progressive web app" />
+		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
 
       <link rel="shortcut icon" href="favicon.ico">
       <link rel="manifest" href="virtual-keyboard.webmanifest">
@@ -56,6 +56,10 @@
 		</dialog>
 
 		<main class="flex w-full max-w-[976px] flex-col space-y-4 lg:space-y-6 xl:max-w-fit">
+			<h1 class="mb-2 text-center text-2xl font-bold tracking-wider text-turquoise duration-500 dark:text-charcoal">
+				Virtual Keyboard PWA
+			</h1>
+
 			<section class="space-y-4 lg:flex lg:justify-evenly lg:space-y-0">
 				<!-- textarea -->
 				<div
