Minor accessibility improvements

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 
 		<main class="flex w-full max-w-[976px] flex-col space-y-4 lg:space-y-6 xl:min-w-[976px] xl:max-w-fit">
 			<h1 class="mb-2 text-center text-2xl font-bold tracking-wider text-turquoise duration-500 dark:text-charcoal">
-				Virtual Keyboard PWA
+				Virtual Keyboard
+				<abbr title="Progressive Web App">PWA</abbr>
 			</h1>
 
 			<section class="space-y-4 lg:flex lg:justify-evenly lg:space-y-0">
@@ -69,7 +70,7 @@
 						rows="3"
 						autocomplete="off"
 						placeholder="Strat typing..."
-						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 dark:bg-zinc-800 dark:text-zinc-100 lg:text-lg"></textarea>
+						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none dark:bg-zinc-800 dark:text-zinc-100 lg:text-lg"></textarea>
 				</div>
 
 				<!-- control buttons -->
