--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
 			<!-- virtual keyboard -->
 			<section class="overflow-auto rounded-2xl shadow-xl">
 				<article
+					inert
 					class="flex min-h-[418px] select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
 					<!-- keyboard keypress sound effect -->
 					<audio id="keySound" preload="auto">
@@ -134,7 +135,6 @@
 				<a
 					href="https://shayan-zamani.me"
 					target="_blank"
-					tabindex="0"
 					rel="noopener noreferrer"
 					class="ml-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 focus-visible:outline focus-visible:outline-current dark:text-blue-400 lg:text-base support:hover:text-blue-700 visited:support:hover:!text-purple-800 dark:support:hover:text-blue-500">
 					Shayan Zamani
