Updated Open Graph image

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<meta property="og:site_name" content="shayan-zamani.me" />
 		<meta property="og:title" name="title" content="Virtual Keyboard Progressive Web App" />
 		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/" />
-		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.png" />
+		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.webp" />
 		<meta property="og:image:alt" content="virtual keyboard progressive web app" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
@@ -24,7 +24,7 @@
 		<meta name="twitter:site" content="@shayan-zamani.me" />
 		<meta name="twitter:title" content="Virtual Keyboard Progressive Web App" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.png" />
+		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.webp" />
 		<meta property="twitter:image:alt" content="virtual keyboard progressive web app" />
 		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
 
