--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
+<!-- prettier-ignore -->
 <!DOCTYPE html>
-<html lang="en-US" dir="ltr" data-theme="light">
+<html lang="en" dir="ltr" data-theme="light">
 	<!-- prettier-ignore -->
 	<head>
 		<meta charset="UTF-8" />
@@ -33,20 +34,20 @@
       <meta name="msapplication-TileColor" content="#00aba9">
       <meta name="application-name" content="Virtual Keyboard">
       <meta name="apple-mobile-web-app-title" content="Virtual Keyboard">
-      <meta name="msapplication-config" content="assets/favicons/browserconfig.xml">
-      <link rel="mask-icon" href="assets/favicons/safari-pinned-tab.svg" color="#00aba9">
-      <meta name="msapplication-TileImage" content="assets/favicons/mstile-144x144.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="192x192" href="assets/favicons/android-chrome-192x192.png">
+      <meta name="msapplication-config" content="./assets/favicons/browserconfig.xml">
+      <link rel="mask-icon" href="./assets/favicons/safari-pinned-tab.svg" color="#00aba9">
+      <meta name="msapplication-TileImage" content="./assets/favicons/mstile-144x144.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicons/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicons/favicon-16x16.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicons/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="./assets/favicons/android-chrome-192x192.png">
 
-		<link rel="stylesheet" href="assets/css/styles.css" />
-		<script type="module" src="assets/js/app.js"></script>
+		<link rel="stylesheet" href="./assets/css/styles.css" />
+		<script type="module" src="./assets/js/app.js"></script>
 	</head>
 
 	<body
-		class="bg-gradient-zinc-300-to-400 dark:bg-gradient-zinc-400-to-500 relative flex h-full min-h-[100dvh] flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 dark:bg-zinc-400 lg:justify-center">
+		class="bg-gradient-zinc-300-to-400 dark:bg-gradient-zinc-400-to-500 relative flex h-full min-h-[100dvh] flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 lg:justify-center dark:bg-zinc-400">
 		<!-- non-desktop device warning modal -->
 		<dialog
 			id="warningModal"
@@ -64,26 +65,25 @@
 			<section class="space-y-4 lg:flex lg:justify-evenly lg:space-y-0">
 				<!-- textarea -->
 				<div
-					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md dark:focus-within:shadow-lg lg:h-[124px] lg:max-w-2xl">
+					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md lg:h-[124px] lg:max-w-2xl dark:focus-within:shadow-lg">
 					<textarea
 						id="textarea"
 						rows="3"
 						autocomplete="off"
 						placeholder="Strat typing..."
-						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none dark:bg-zinc-800 dark:text-zinc-100 lg:text-lg"></textarea>
+						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
 				</div>
 
 				<!-- control buttons -->
-				<aside
-					class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-3">
+				<aside class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-3">
 					<!-- clear button -->
 					<button
 						type="button"
 						id="clearTextareaBtn"
-						class="btn bg-red-500 focus-visible:outline-red-500 dark:bg-red-600 lg:place-self-end support:hover:bg-red-600 dark:support:hover:bg-red-700">
+						class="btn bg-red-500 focus-visible:outline-red-500 lg:place-self-end support:hover:bg-red-600 dark:bg-red-600 dark:support:hover:bg-red-700">
 						<span class="w-2/3">Clear</span>
 						<svg class="h-6 w-6 fill-current">
-							<use href="assets/icons.svg#close-x"></use>
+							<use href="./assets/icons.svg#close-x"></use>
 						</svg>
 					</button>
 
@@ -92,10 +92,10 @@
 						type="button"
 						id="soundBtn"
 						title="sound"
-						class="btn bg-blue-500 focus-visible:outline-blue-500 dark:bg-blue-600 lg:place-self-start support:hover:bg-blue-600 dark:support:hover:bg-blue-700">
+						class="btn bg-blue-500 focus-visible:outline-blue-500 lg:place-self-start support:hover:bg-blue-600 dark:bg-blue-600 dark:support:hover:bg-blue-700">
 						<span class="w-2/3" id="soundState">On</span>
 						<svg class="h-[23px] w-[23px] stroke-current">
-							<use href="assets/icons.svg#speaker-on" id="speakerIcon"></use>
+							<use href="./assets/icons.svg#speaker-on" id="speakerIcon"></use>
 						</svg>
 					</button>
 
@@ -104,9 +104,9 @@
 						type="button"
 						title="theme"
 						id="changeThemeBtn"
-						class="click-effect h-11 shrink-0 basis-[90px] duration-[250ms] focus-visible:rounded-[1px] focus-visible:outline-turquoise dark:focus-visible:outline-charcoal lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-[50px] lg:w-min lg:min-w-[100px] support:hover:scale-105">
+						class="click-effect h-11 shrink-0 basis-[90px] duration-[250ms] focus-visible:rounded-[1px] focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-[50px] lg:w-min lg:min-w-[100px] support:hover:scale-105 dark:focus-visible:outline-charcoal">
 						<svg class="h-full w-full lg:h-[50px]">
-							<use href="assets/icons.svg#keyboard-light" id="themeIcon"></use>
+							<use href="./assets/icons.svg#keyboard-light" id="themeIcon"></use>
 						</svg>
 					</button>
 				</aside>
@@ -119,8 +119,8 @@
 					class="flex min-h-[418px] select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
 					<!-- keyboard keypress sound effect -->
 					<audio id="keySound" preload="auto">
-						<source src="assets/audios/keypress-sound.wav" type="audio/wav" />
-						<source src="assets/audios/keypress-sound.mp3" type="audio/mpeg" />
+						<source src="./assets/audios/keypress-sound.wav" type="audio/wav" />
+						<source src="./assets/audios/keypress-sound.mp3" type="audio/mpeg" />
 						Your browser does not supprot the audio element.
 					</audio>
 
@@ -136,7 +136,7 @@
 					href="https://shayan-zamani.me"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="ml-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 focus-visible:outline focus-visible:outline-current dark:text-blue-400 lg:text-base support:hover:text-blue-700 visited:support:hover:!text-purple-800 dark:support:hover:text-blue-500">
+					class="ml-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 focus-visible:outline focus-visible:outline-current lg:text-base support:hover:text-blue-700 visited:support:hover:!text-purple-800 dark:text-blue-400 dark:support:hover:text-blue-500">
 					Shayan Zamani
 				</a>
 			</address>
