--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 		<meta property="twitter:image:alt" content="virtual keyboard progressive web app" />
 		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
 
-      <link rel="shortcut icon" href="favicon.ico">
-      <link rel="manifest" href="virtual-keyboard.webmanifest">
+      <link rel="icon" href="./favicon.ico">
+      <link rel="manifest" href="./virtual-keyboard.webmanifest">
       <meta name="msapplication-TileColor" content="#00aba9">
       <meta name="application-name" content="Virtual Keyboard">
       <meta name="apple-mobile-web-app-title" content="Virtual Keyboard">
@@ -47,8 +47,8 @@
 	</head>
 
 	<body
-		class="bg-gradient-zinc-300-to-400 dark:bg-gradient-zinc-400-to-500 relative flex h-full min-h-[100dvh] flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 lg:justify-center dark:bg-zinc-400">
-		<!-- non-desktop device warning modal -->
+		class="bg-zinc-300-to-400 dark:bg-zinc-400-to-500 relative flex h-full min-h-screen flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 supports-[min-height:100dvh]:min-h-dvh lg:justify-center dark:bg-zinc-400">
+		<!-- Non-desktop device warning modal -->
 		<dialog
 			id="warningModal"
 			class="fixed z-50 hidden w-11/12 max-w-xs flex-col items-center justify-center gap-4 rounded-lg border-4 border-turquoise bg-charcoal p-4 text-center text-xl leading-8 text-inherit backdrop:bg-[#000000bf] open:flex">
@@ -56,75 +56,76 @@
 			<button type="button" id="closeModalBtn" class="rounded-lg bg-turquoise px-14 py-2.5 font-medium">OK</button>
 		</dialog>
 
-		<main class="flex w-full max-w-[976px] flex-col space-y-4 lg:space-y-6 xl:min-w-[976px] xl:max-w-fit">
+		<main class="xl:min-w-244 xl:max-w-fit max-w-244 flex w-full flex-col space-y-4 lg:space-y-6">
 			<h1 class="mb-2 text-center text-2xl font-bold tracking-wider text-turquoise duration-500 dark:text-charcoal">
 				Virtual Keyboard
 				<abbr title="Progressive Web App">PWA</abbr>
 			</h1>
 
 			<section class="space-y-4 lg:flex lg:justify-evenly lg:space-y-0">
-				<!-- textarea -->
+				<!-- Textbox -->
 				<div
 					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md lg:h-[124px] lg:max-w-2xl dark:focus-within:shadow-lg">
 					<textarea
+						autofocus
 						id="textarea"
 						rows="3"
 						autocomplete="off"
 						placeholder="Strat typing..."
-						class="h-full w-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
+						class="size-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
 				</div>
 
-				<!-- control buttons -->
+				<!-- Controls -->
 				<aside class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-3">
-					<!-- clear button -->
+					<!-- Clear button -->
 					<button
 						type="button"
 						id="clearTextareaBtn"
-						class="btn bg-red-500 focus-visible:outline-red-500 lg:place-self-end support:hover:bg-red-600 dark:bg-red-600 dark:support:hover:bg-red-700">
+						class="btn bg-red-500 hover:bg-red-600 focus-visible:outline-red-500 lg:place-self-end dark:bg-red-600 dark:hover:bg-red-700">
 						<span class="w-2/3">Clear</span>
 						<svg class="h-6 w-6 fill-current">
 							<use href="./assets/icons.svg#close-x"></use>
 						</svg>
 					</button>
 
-					<!-- sound button -->
+					<!-- Sound button -->
 					<button
 						type="button"
 						id="soundBtn"
 						title="sound"
-						class="btn bg-blue-500 focus-visible:outline-blue-500 lg:place-self-start support:hover:bg-blue-600 dark:bg-blue-600 dark:support:hover:bg-blue-700">
+						class="btn bg-blue-500 hover:bg-blue-600 focus-visible:outline-blue-500 lg:place-self-start dark:bg-blue-600 dark:hover:bg-blue-700">
 						<span class="w-2/3" id="soundState">On</span>
-						<svg class="h-[23px] w-[23px] stroke-current">
+						<svg class="size-5.75 stroke-current">
 							<use href="./assets/icons.svg#speaker-on" id="speakerIcon"></use>
 						</svg>
 					</button>
 
-					<!-- theme button -->
+					<!-- Theme button -->
 					<button
 						type="button"
 						title="theme"
 						id="changeThemeBtn"
-						class="click-effect h-11 shrink-0 basis-[90px] duration-[250ms] focus-visible:rounded-[1px] focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-[50px] lg:w-min lg:min-w-[100px] support:hover:scale-105 dark:focus-visible:outline-charcoal">
-						<svg class="h-full w-full lg:h-[50px]">
+						class="ripple-effect basis-22.5 duration-250 focus-visible:rounded-px lg:h-12.5 lg:min-w-25 h-11 shrink-0 hover:scale-105 focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:w-min dark:focus-visible:outline-charcoal">
+						<svg class="lg:h-12.5 size-full">
 							<use href="./assets/icons.svg#keyboard-light" id="themeIcon"></use>
 						</svg>
 					</button>
 				</aside>
 			</section>
 
-			<!-- virtual keyboard -->
+			<!-- Virtual keyboard -->
 			<section class="overflow-auto rounded-2xl shadow-xl">
 				<article
 					inert
 					class="flex min-h-[418px] select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
-					<!-- keyboard keypress sound effect -->
+					<!-- Keyboard keypress audio -->
 					<audio id="keySound" preload="auto">
 						<source src="./assets/audios/keypress-sound.wav" type="audio/wav" />
 						<source src="./assets/audios/keypress-sound.mp3" type="audio/mpeg" />
 						Your browser does not supprot the audio element.
 					</audio>
 
-					<div id="keyboard" class="flex flex-col gap-3 rounded-[inherit]"></div>
+					<div id="keyboard" class="flex flex-col gap-3 rounded-inherit"></div>
 				</article>
 			</section>
 		</main>
@@ -136,7 +137,7 @@
 					href="https://shayan-zamani.me"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="ml-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 focus-visible:outline focus-visible:outline-current lg:text-base support:hover:text-blue-700 visited:support:hover:!text-purple-800 dark:text-blue-400 dark:support:hover:text-blue-500">
+					class="ms-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 hover:text-blue-700 visited:hover:!text-purple-800 focus-visible:outline focus-visible:outline-current lg:text-base dark:text-blue-400 dark:hover:text-blue-500">
 					Shayan Zamani
 				</a>
 			</address>
