🩹 fix: make page fill available space in landscape

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 		<meta name="author" content="Shayan Zamani" />
 		<meta name="color-scheme" content="light dark" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="theme-color" content="#d4d4d8" id="themeColorMetaTag" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
 		<meta name="keywords" content="virtual keyboard progressive web app, online keyboard, virtual typing, experience virtual typing, pwa, progressive web app" />
 
 		<meta property="og:type" content="website" />
