✨ feat: improve responsiveness and UX

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<!-- prettier-ignore -->
 	<head>
 		<meta charset="UTF-8" />
-		<title>Virtual Keyboard Progressive Web App | Experience Virtual Typing!</title>
+		<title>Virtual Keyboard Progressive Web App - Experience Virtual Typing!</title>
 
 		<meta name="author" content="Shayan Zamani" />
 		<meta name="color-scheme" content="light dark" />
@@ -47,22 +47,22 @@
 	</head>
 
 	<body
-		class="bg-zinc-300-to-400 dark:bg-zinc-400-to-500 relative flex h-full min-h-screen flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 supports-[min-height:100dvh]:min-h-dvh lg:justify-center dark:bg-zinc-400">
+		class="bg-zinc-300-to-40 dark:bg-zinc-400-to-500 relative flex h-full min-h-screen flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 has-[dialog[open]]:overflow-hidden supports-[min-height:100dvh]:min-h-dvh lg:justify-center dark:bg-zinc-400">
 		<!-- Non-desktop device warning modal -->
 		<dialog
 			id="warning_modal"
-			class="fixed z-50 hidden w-11/12 max-w-xs flex-col items-center justify-center gap-4 rounded-lg border-4 border-turquoise bg-charcoal p-4 text-center text-xl leading-8 text-inherit backdrop:bg-[#000000bf] open:flex">
+			class="fixed z-50 hidden w-11/12 max-w-max flex-col items-center justify-center gap-4 rounded-lg border-4 border-turquoise bg-charcoal p-4 text-center text-xl leading-8 text-inherit backdrop:bg-[#000000bf] open:flex">
 			<strong>Please preview website on a desktop.</strong>
-			<button type="button" id="close_modal_btn" class="rounded-lg bg-turquoise px-14 py-2.5 font-medium">OK</button>
+			<button type="button" id="close_modal_btn" class="rounded-lg bg-turquoise px-12 py-2 font-medium">OK</button>
 		</dialog>
 
-		<main class="xl:min-w-244 xl:max-w-fit flex w-full max-w-244 flex-col space-y-4 lg:space-y-6">
+		<main class="flex w-full max-w-244 flex-col space-y-4 lg:space-y-6 xl:min-w-244 xl:max-w-fit">
 			<h1 class="mb-2 text-center text-2xl font-bold tracking-wider text-turquoise duration-500 dark:text-charcoal">
 				Virtual Keyboard
 				<abbr title="Progressive Web App">PWA</abbr>
 			</h1>
 
-			<section class="space-y-4 lg:flex lg:justify-evenly lg:space-y-0">
+			<section class="flex flex-col-reverse gap-4 lg:flex-row lg:justify-evenly">
 				<!-- Text box -->
 				<div
 					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md lg:h-[124px] lg:max-w-2xl dark:focus-within:shadow-lg">
@@ -72,29 +72,27 @@
 						rows="3"
 						autocomplete="off"
 						placeholder="Strat typing..."
-						class="size-full resize-none bg-zinc-100 px-2.5 py-1.5 text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
+						class="size-full resize-none bg-zinc-100 px-2.5 py-[5px] text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
 				</div>
 
 				<!-- Controls -->
-				<aside class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-3">
+				<aside
+					class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-x-3.5 lg:gap-y-3">
 					<!-- Clear button -->
 					<button
 						type="button"
 						id="clear_text_box_btn"
 						class="btn bg-red-500 hover:bg-red-600 focus-visible:outline-red-500 lg:place-self-end dark:bg-red-600 dark:hover:bg-red-700">
-						<span class="w-2/3">Clear</span>
-						<svg class="h-6 w-6 fill-current">
-							<use href="./assets/icons.svg#close_x"></use>
-						</svg>
+						Clear
 					</button>
 
 					<!-- Sound button -->
 					<button
 						type="button"
+						title="Keypress sound"
 						id="sound_btn"
-						title="sound"
-						class="btn bg-blue-500 hover:bg-blue-600 focus-visible:outline-blue-500 lg:place-self-start dark:bg-blue-600 dark:hover:bg-blue-700">
-						<span class="w-2/3" id="sound_state">On</span>
+						class="btn flex justify-evenly bg-blue-500 hover:bg-blue-600 focus-visible:outline-blue-500 lg:-space-x-1 lg:place-self-start dark:bg-blue-600 dark:hover:bg-blue-700">
+						<span id="sound_state">On</span>
 						<svg class="size-5.75 stroke-current">
 							<use href="./assets/icons.svg#speaker_on" id="speaker_icon"></use>
 						</svg>
@@ -103,9 +101,9 @@
 					<!-- Theme button -->
 					<button
 						type="button"
-						title="theme"
+						title="Theme"
 						id="change_theme_btn"
-						class="ripple-effect h-11 shrink-0 basis-22.5 duration-250 hover:scale-105 focus-visible:rounded-px focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-12.5 lg:w-min lg:min-w-25 dark:focus-visible:outline-charcoal">
+						class="ripple-effect h-11 shrink-0 basis-22.5 duration-250 focus-visible:rounded-px focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-12.5 lg:w-min lg:min-w-25 lg:scale-105 lg:hover:scale-110 dark:focus-visible:outline-charcoal">
 						<svg class="size-full lg:h-12.5">
 							<use href="./assets/icons.svg#keyboard_light" id="theme_icon"></use>
 						</svg>
@@ -115,8 +113,7 @@
 
 			<!-- Virtual keyboard -->
 			<section class="overflow-auto rounded-2xl shadow-xl">
-				<article
-					inert
+				<div
 					class="flex min-h-[418px] select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
 					<!-- Keyboard keypress audio -->
 					<audio hidden aria-hidden="true" id="keypress_sound" preload="auto">
@@ -125,18 +122,18 @@
 					</audio>
 
 					<div id="keyboard" class="flex flex-col gap-3 rounded-inherit"></div>
-				</article>
+				</div>
 			</section>
 		</main>
 
 		<footer class="absolute bottom-3 -space-x-2">
-			<span class="pt-0.5 text-gray-900">©</span>
+			<small class="pt-0.5 text-base text-gray-900">©</small>
 			<address class="-ml-1.5 inline-block not-italic">
 				<a
 					href="https://shayan-zamani.me"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="ms-2 rounded-md text-sm font-semibold text-blue-600 underline duration-500 visited:!text-purple-700 hover:text-blue-700 visited:hover:!text-purple-800 focus-visible:outline focus-visible:outline-current lg:text-base dark:text-blue-400 dark:hover:text-blue-500">
+					class="ms-2 rounded-md text-sm font-semibold text-blue-600 underline duration-250 visited:!text-purple-700 hover:text-blue-700 visited:hover:!text-purple-800 focus-visible:outline focus-visible:outline-current lg:text-base dark:text-blue-400 dark:hover:text-blue-500">
 					Shayan Zamani
 				</a>
 			</address>
