--- a/index.html
+++ b/index.html
@@ -6,28 +6,27 @@
 		<meta charset="UTF-8" />
 		<title>Virtual Keyboard Progressive Web App - Experience Virtual Typing!</title>
 
-		<meta name="author" content="Shayan Zamani" />
+		<meta name="author" content="Shayan Zamani, sh.zamani384@gmail.com" />
 		<meta name="color-scheme" content="light dark" />
 		<meta name="theme-color" content="#d4d4d8" id="theme_color_meta_tag" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-		<meta name="keywords" content="virtual keyboard progressive web app, online keyboard, virtual typing, experience virtual typing, pwa, progressive web app" />
+		<meta name="keywords" content="html css js virtual keyboard, virtual keyboard progressive web app, online keyboard pwa, experience virtual typing" />
 
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="shayan-zamani.me" />
 		<meta property="og:title" name="title" content="Virtual Keyboard Progressive Web App" />
-		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/" />
-		<meta property="og:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.webp" />
-		<meta property="og:image:alt" content="virtual keyboard progressive web app" />
+		<meta property="og:url" content="https://shayanthenerd.github.io/virtual-keyboard-PWA" />
+		<meta property="og:image" content="./og-img.webp" />
+		<meta property="og:image:alt" content="Virtual Keyboard Progressive Web App" />
 		<meta property="og:image:width" content="1200" />
 		<meta property="og:image:height" content="630" />
-		<meta property="og:description" name="description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+		<meta property="og:description" name="description" content="Virtual Keyboard Progressive Web App (PWA) gives you an awesome virtual typing experience. Install the PWA version on your device and enjoy it offline! It's built with Vanilla HTML, CSS, and JavaScript." />
 
 		<meta name="twitter:site" content="@shayan-zamani.me" />
 		<meta name="twitter:title" content="Virtual Keyboard Progressive Web App" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://shayanthenerd.github.io/virtual-keyboard-PWA/og-img.webp" />
-		<meta property="twitter:image:alt" content="virtual keyboard progressive web app" />
-		<meta name="twitter:description" content="Virtual Keyboard Progressive Web App gives you an awesome virtual-typing experience. Install the PWA version on your device and enjoy it offline! Start typing on your keyboard and listen to the sound of keys going up and down, printing out words and sentences." />
+		<meta name="twitter:image" content="./og-img.webp" />
+		<meta property="twitter:image:alt" content="Virtual Keyboard Progressive Web App" />
 
       <link rel="icon" href="./favicon.ico">
       <link rel="manifest" href="./virtual-keyboard.webmanifest">
@@ -47,40 +46,48 @@
 	</head>
 
 	<body
-		class="bg-zinc-300-to-40 dark:bg-zinc-400-to-500 relative flex h-full min-h-screen flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 duration-500 has-[dialog[open]]:overflow-hidden supports-[min-height:100dvh]:min-h-dvh lg:justify-center dark:bg-zinc-400">
+		class="bg-zinc-300-to-400 dark:bg-zinc-400-to-500 relative flex h-full min-h-screen flex-col items-center bg-zinc-300 p-3 pb-12 text-zinc-100 antialiased duration-500 has-[dialog[open]]:overflow-hidden supports-[min-height:100dvh]:min-h-dvh lg:justify-center dark:bg-zinc-400">
 		<!-- Non-desktop device warning modal -->
 		<dialog
 			id="warning_modal"
-			class="fixed z-50 hidden w-11/12 max-w-max flex-col items-center justify-center gap-4 rounded-lg border-4 border-turquoise bg-charcoal p-4 text-center text-xl leading-8 text-inherit backdrop:bg-[#000000bf] open:flex">
-			<strong>Please preview website on a desktop.</strong>
-			<button type="button" id="close_modal_btn" class="rounded-lg bg-turquoise px-12 py-2 font-medium">OK</button>
+			class="fixed z-50 hidden w-11/12 max-w-max flex-col items-center justify-center gap-6 rounded-lg border-4 border-turquoise bg-zinc-100 p-4 transition-all duration-500 backdrop:bg-[#000000bf] open:flex focus-visible:outline-none dark:bg-zinc-900">
+			<strong class="text-balance text-center text-lg text-zinc-900 transition-colors duration-75 dark:text-zinc-100">
+				Please preview website on a desktop.
+			</strong>
+
+			<button
+				type="button"
+				aria-controls="warning_modal"
+				class="rounded-lg bg-turquoise px-12 py-2 text-base font-medium text-zinc-100 focus-visible:outline-turquoise">
+				OK
+			</button>
 		</dialog>
 
 		<main class="flex w-full max-w-244 flex-col space-y-4 lg:space-y-6 xl:min-w-244 xl:max-w-fit">
 			<h1 class="mb-2 text-center text-2xl font-bold tracking-wider text-turquoise duration-500 dark:text-charcoal">
 				Virtual Keyboard
-				<abbr title="Progressive Web App">PWA</abbr>
+				<abbr title="Progressive Web App" class="cursor-default">PWA</abbr>
 			</h1>
 
-			<section class="flex flex-col-reverse gap-4 lg:flex-row lg:justify-evenly">
+			<form onsubmit="return" class="flex flex-col-reverse gap-4 lg:flex-row lg:justify-evenly">
 				<!-- Text box -->
-				<div
+				<fieldset
 					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md lg:h-[124px] lg:max-w-2xl dark:focus-within:shadow-lg">
 					<textarea
 						autofocus
-						id="text_box"
 						rows="3"
 						autocomplete="off"
 						placeholder="Strat typing..."
+						id="text_box"
 						class="size-full resize-none bg-zinc-100 px-2.5 py-[5px] text-zinc-950 caret-zinc-400 duration-500 placeholder:text-zinc-400 focus-visible:outline-none lg:text-lg dark:bg-zinc-800 dark:text-zinc-100"></textarea>
-				</div>
+				</fieldset>
 
 				<!-- Controls -->
-				<aside
+				<fieldset
 					class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-x-3.5 lg:gap-y-3">
 					<!-- Clear button -->
 					<button
-						type="button"
+						type="reset"
 						id="clear_text_box_btn"
 						class="btn bg-red-500 hover:bg-red-600 focus-visible:outline-red-500 lg:place-self-end dark:bg-red-600 dark:hover:bg-red-700">
 						Clear
@@ -90,11 +97,11 @@
 					<button
 						type="button"
 						title="Keypress sound"
-						id="sound_btn"
+						id="sound_control_btn"
 						class="btn flex justify-evenly bg-blue-500 hover:bg-blue-600 focus-visible:outline-blue-500 lg:-space-x-1 lg:place-self-start dark:bg-blue-600 dark:hover:bg-blue-700">
 						<span id="sound_state">On</span>
 						<svg class="size-5.75 stroke-current">
-							<use href="./assets/icons.svg#speaker_on" id="speaker_icon"></use>
+							<use href="./assets/icons.svg#speaker_on" id="sound_state_icon"></use>
 						</svg>
 					</button>
 
@@ -103,20 +110,20 @@
 						type="button"
 						title="Theme"
 						id="change_theme_btn"
-						class="ripple-effect h-11 shrink-0 basis-22.5 duration-250 focus-visible:rounded-px focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-12.5 lg:w-min lg:min-w-25 lg:scale-105 lg:hover:scale-110 dark:focus-visible:outline-charcoal">
+						class="ripple-effect h-11 shrink-0 basis-22.5 duration-500 focus-visible:rounded-px focus-visible:outline-turquoise lg:col-start-2 lg:row-start-1 lg:row-end-3 lg:h-12.5 lg:w-min lg:min-w-25 lg:scale-105 lg:hover:scale-110 dark:focus-visible:outline-charcoal">
 						<svg class="size-full lg:h-12.5">
 							<use href="./assets/icons.svg#keyboard_light" id="theme_icon"></use>
 						</svg>
 					</button>
-				</aside>
-			</section>
+				</fieldset>
+			</form>
 
 			<!-- Virtual keyboard -->
 			<section class="overflow-auto rounded-2xl shadow-xl">
 				<div
 					class="flex min-h-[418px] select-none overflow-auto rounded-2xl bg-turquoise p-3.5 duration-500 dark:bg-zinc-900">
 					<!-- Keyboard keypress audio -->
-					<audio hidden aria-hidden="true" id="keypress_sound" preload="auto">
+					<audio hidden aria-hidden="true" preload="auto" id="keypress_sound">
 						<source src="./assets/audios/keypress-sound.wav" type="audio/wav" />
 						<source src="./assets/audios/keypress-sound.mp3" type="audio/mp3" />
 					</audio>
@@ -133,7 +140,8 @@
 					href="https://shayan-zamani.me"
 					target="_blank"
 					rel="noopener noreferrer"
-					class="ms-2 rounded-md text-sm font-semibold text-blue-600 underline duration-250 visited:!text-purple-700 hover:text-blue-700 visited:hover:!text-purple-800 focus-visible:outline focus-visible:outline-current lg:text-base dark:text-blue-400 dark:hover:text-blue-500">
+					id="copyright_link"
+					class="ms-2 rounded-md text-sm font-semibold text-blue-700 underline transition-all duration-150 visited:text-purple-700 hover:text-blue-800 visited:hover:text-purple-800 focus-visible:outline focus-visible:outline-current lg:text-base dark:text-blue-800 dark:hover:text-blue-900">
 					Shayan Zamani
 				</a>
 			</address>
