🩹 fix: always keep mobile virtual keybaord hidden

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
 					<textarea
 						autofocus
 						rows="3"
+						inputmode="none"
 						autocomplete="off"
 						placeholder="Strat typing..."
 						id="text_box"
