🩹 fix: improve accessibility

--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 				<!-- Text box -->
 				<fieldset
 					class="h-24 w-full overflow-hidden rounded-xl shadow focus-within:shadow-md lg:h-[124px] lg:max-w-2xl dark:focus-within:shadow-lg">
+					<legend class="sr-only">Text Box</legend>
 					<textarea
 						autofocus
 						rows="3"
@@ -86,6 +87,8 @@
 				<!-- Controls -->
 				<fieldset
 					class="flex items-center justify-center gap-4 lg:mt-0 lg:grid lg:grid-cols-2 lg:grid-rows-2 lg:gap-x-3.5 lg:gap-y-3">
+					<legend class="sr-only">Control Buttons</legend>
+
 					<!-- Clear button -->
 					<button
 						type="reset"
